add js~cfg options to kiwotigoCreateContinent()

--- a/run-kiwotigo.html
+++ b/run-kiwotigo.html
@@ -1,24 +1,48 @@
 <html>
-<head>
-  <meta charset="utf-8"/>
-  <title>run kiwotigo</title>
-  <script src="wasm_exec.js"></script>
-  <script>
-    const go = new Go();
-    const __kiwotiGo = WebAssembly.instantiateStreaming(
-      fetch("kiwotigo.wasm"),
-      go.importObject
-    ).then((result) => {
-      go.run(result.instance);
-    });
+  <head>
+    <meta charset="utf-8" />
+    <title>run kiwotigo</title>
+    <script src="wasm_exec.js"></script>
+    <script>
+      const go = new Go();
+      const __kiwotiGo = WebAssembly.instantiateStreaming(
+        fetch("kiwotigo.wasm"),
+        go.importObject
+      ).then((result) => {
+        go.run(result.instance);
+      });
 
-    function kiwotigoCreateContinent() {
-      return __kiwotiGo.then(() => new Promise((resolve) => {
-        __kiwotiGo_createContinent((result) => resolve(JSON.parse(result)));
-      }));
-    }
-  </script>
-</head>
-<body>
-</body>
+      function kiwotigoCreateContinent(cfg) {
+        return __kiwotiGo.then(
+          () =>
+            new Promise((resolve) => {
+              __kiwotiGo_createContinent(
+                {
+                  gridWidth: 10,
+                  gridHeight: 10,
+                  gridOuterPaddingX: 25,
+                  gridOuterPaddingY: 25,
+                  gridInnerPaddingX: 6,
+                  gridInnerPaddingY: 3,
+                  gridHexWidth: 16,
+                  gridHexHeight: 14,
+                  hexWidth: 12, //24,
+                  hexHeight: 12,
+                  hexPaddingX: 0, //5,  //3,
+                  hexPaddingY: 0, //5,  //3,
+                  fastGrowIterations: 8, //10,
+                  minimalGrowIterations: 120, //48,
+                  maxRegionSizeFactor: 3,
+                  divisibilityBy: 1,
+                  probabilityCreateRegionAt: 0.6,
+                  ...cfg,
+                },
+                (result) => resolve(JSON.parse(result))
+              );
+            })
+        );
+      }
+    </script>
+  </head>
+  <body></body>
 </html>
