--- a/test-kiwotigo-mjs.html
+++ b/test-kiwotigo-mjs.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>kiwotigo.mjs</title>
+    <title>test kiwotigo.mjs</title>
     <script type="module">
       import * as kiwotigo from "./kiwotigo.mjs";
       console.log("kiwotigo", kiwotigo);
