--- a/test-kiwotigo-wasm.html
+++ b/test-kiwotigo-wasm.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>run kiwotigo</title>
+    <title>test kiwotigo (wasm)</title>
     <script src="wasm_exec.js"></script>
     <script>
       const go = new Go();
