--- a/test-kiwoticum-world-builder.html
+++ b/test-kiwoticum-world-builder.html
@@ -6,13 +6,16 @@
   <body>
     <button id=create>create</button>
     <script type="module">
-      import { create } from "./kiwoticum-world-builder.mjs";
-      document
-        .getElementById('create')
-        .addEventListener('click', () => create({
-          gridWidth: 7,
-          gridHeight: 5,
-        }))
+      import { build } from "./kiwoticum-world-builder.mjs";
+
+      const onCreate = () => build({
+        gridWidth: 7,
+        gridHeight: 5,
+      }).then((data) => {
+        console.log('received new build', data)
+      })
+
+      document.getElementById('create').addEventListener('click', onCreate)
     </script>
   </body>
 </html>
