--- a/test-kiwotigo-mjs.html
+++ b/test-kiwotigo-mjs.html
@@ -3,19 +3,208 @@
     <meta charset="utf-8" />
     <title>test kiwotigo.mjs</title>
   </head>
+  <style>
+    body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
+    .createContinentConfig {
+      position: relative;
+      width: 270px;
+      height: 100vh;
+      user-select: none;
+      border-right: 1px solid #eee;
+    }
+
+    h1 {
+      margin: 0 0 0.5em;
+      padding: 0.3em 0 0 0.3em;
+    }
+
+    :root {
+      --focus-outline: double #d06;
+    }
+
+    .kiwotigo-form fieldset.kiwotigo-form-group {
+      border: 0;
+    }
+
+    .kiwotigo-form-label,
+    .kiwotigo-form-input {
+      font-size: 14px;
+      line-height: 20px;
+    }
+
+    .kiwotigo-form-label {
+      padding-right: 1em;
+    }
+
+    .kiwotigo-form-input {
+      border-width: 0;
+      background-color: #f8f9fa;
+      box-shadow: 0 1px 0 rgba(27,31,35,.04), inset 0 1px 0 hsla(0,0%,100%,.25);
+    }
+    .kiwotigo-form-input:hover {
+      background-color: #f0f1f2;
+    }
+    .kiwotigo-form-input:focus {
+      background-color: #ffffff;
+      outline: var(--focus-outline);
+    }
+
+    input[type="number"].kiwotigo-form-input {
+      width: 5em;
+    }
+
+    .kiwotigo-input-row {
+      display: flex;
+      justify-content: flex-end;
+      align-items: baseline;
+      margin-bottom: 4px;
+    }
+
+    .kiwotigo-form-actions {
+      padding-top: 1em;
+      text-align: right;
+    }
+
+    .kiwotigo-button {
+      position: relative;
+      display: inline-block;
+      padding: 5px 16px;
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 20px;
+      white-space: nowrap;
+      vertical-align: middle;
+      cursor: pointer;
+      user-select: none;
+      border: 1px solid;
+      border-radius: 6px;
+      appearance: none;
+      color: #24292e;
+      background-color: #fafbfc;
+      border-color: rgba(27,31,35,.15);
+      box-shadow: 0 1px 0 rgba(27,31,35,.04), inset 0 1px 0 hsla(0,0%,100%,.25);
+      transition: background-color .2s cubic-bezier(.3,0,.5,1);
+    }
+    .kiwotigo-button:hover {
+      background-color: #f3f4f6;
+      transition-duration: .1s;
+    }
+    .kiwotigo-button:focus {
+      outline: var(--focus-outline);
+    }
+
+    .kiwotigo-monospace {
+      font-family: monospace;
+    }
+
+  </style>
   <body>
-    <button id=create>create</button>
+    <section class="createContinentConfig">
+      <h1>kiwotigo.mjs</h1>
+      <form id="createContinent" class="kiwotigo-form">
+        <fieldset class="kiwotigo-form-group">
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="gridWidth">gridWidth</label>
+            <input class="kiwotigo-form-input" name="gridWidth" type="number" value="7" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="gridHeight">gridHeight</label>
+            <input class="kiwotigo-form-input" name="gridHeight" type="number" value="7" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">gridOuterPaddingX</label>
+            <input class="kiwotigo-form-input" type="number" value="40" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">gridOuterPaddingY</label>
+            <input class="kiwotigo-form-input" type="number" value="40" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">gridInnerPaddingX</label>
+            <input class="kiwotigo-form-input" type="number" value="8" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">gridInnerPaddingY</label>
+            <input class="kiwotigo-form-input" type="number" value="8" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">gridHexWidth</label>
+            <input class="kiwotigo-form-input" type="number" value="15" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">gridHexHeight</label>
+            <input class="kiwotigo-form-input" type="number" value="15" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">hexWidth</label>
+            <input class="kiwotigo-form-input" type="number" value="10" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">hexHeight</label>
+            <input class="kiwotigo-form-input" type="number" value="10" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">hexPaddingX</label>
+            <input class="kiwotigo-form-input" type="number" value="0" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">hexPaddingY</label>
+            <input class="kiwotigo-form-input" type="number" value="0" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">minimalGrowIterations</label>
+            <input class="kiwotigo-form-input" type="number" value="100" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">fastGrowIterations</label>
+            <input class="kiwotigo-form-input" type="number" value="4" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">maxRegionSizeFactor</label>
+            <input class="kiwotigo-form-input" type="number" value="3" />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="aligned-name">probabilityCreateRegionAt</label>
+            <input
+              class="kiwotigo-form-input"
+              type="number"
+              value="0.7"
+              min="0.01"
+              max="1"
+              step="0.01"
+            />
+          </div>
+          <div class="kiwotigo-form-actions">
+            <button type="submit" class="kiwotigo-button">
+              Create New Continent
+            </button>
+          </div>
+        </fieldset>
+      </form>
+    </section>
+
     <script type="module">
-      import { build } from "./kiwotigo.mjs";
+      import { build } from './kiwotigo.mjs';
 
-      const onCreate = () => build({
-        gridWidth: 7,
-        gridHeight: 5,
-      }).then((data) => {
-        console.log('received new build', data)
-      })
+      const onCreate = () =>
+        build({
+          gridWidth: 7,
+          gridHeight: 5,
+        }).then((data) => {
+          console.log('received new build', data);
+        });
 
-      document.getElementById('create').addEventListener('click', onCreate)
+      document
+        .getElementById('createContinent')
+        .addEventListener('submit', (event) => {
+          event.preventDefault();
+          onCreate();
+        });
     </script>
   </body>
 </html>
