improve painter styles

--- a/test-kiwotigo-mjs.html
+++ b/test-kiwotigo-mjs.html
@@ -109,6 +109,10 @@
     main {
       text-align: center;
     }
+    #kiwotigoCanvas {
+      max-width: 100vw;
+      max-height: 100vh;
+    }
   </style>
   <body>
     <section class="createContinentConfig">
