--- a/test-kiwotigo-mjs.html
+++ b/test-kiwotigo-mjs.html
@@ -1,119 +1,119 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <title>test kiwotigo.mjs</title>
+    <style>
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+
+      .createContinentConfig {
+        position: absolute;
+        width: 270px;
+        user-select: none;
+        border-right: 1px solid #eee;
+        border-bottom: 1px solid #eee;
+        background-color: rgba(255, 255, 255, 0.7);
+        border-bottom-right-radius: 6px;
+      }
+
+      h1 {
+        margin: 0 0 0.5em;
+        padding: 0.3em 0 0 0.3em;
+      }
+
+      :root {
+        --focus-outline: double #d06;
+      }
+
+      .kiwotigo-form fieldset.kiwotigo-form-group {
+        border: 0;
+      }
+
+      .kiwotigo-form-label,
+      .kiwotigo-form-input {
+        font-size: 14px;
+        line-height: 20px;
+      }
+
+      .kiwotigo-form-label {
+        padding-right: 1em;
+      }
+
+      .kiwotigo-form-input {
+        border-width: 0;
+        background-color: #f8f9fa;
+        box-shadow: 0 1px 0 rgba(27, 31, 35, 0.04),
+          inset 0 1px 0 hsla(0, 0%, 100%, 0.25);
+      }
+      .kiwotigo-form-input:hover {
+        background-color: #f0f1f2;
+      }
+      .kiwotigo-form-input:focus {
+        background-color: #ffffff;
+        outline: var(--focus-outline);
+      }
+
+      input[type="number"].kiwotigo-form-input {
+        width: 5em;
+      }
+
+      .kiwotigo-input-row {
+        display: flex;
+        justify-content: flex-end;
+        align-items: baseline;
+        margin-bottom: 4px;
+      }
+
+      .kiwotigo-form-actions {
+        padding-top: 1em;
+        text-align: right;
+      }
+
+      .kiwotigo-button {
+        position: relative;
+        display: inline-block;
+        padding: 5px 16px;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 20px;
+        white-space: nowrap;
+        vertical-align: middle;
+        cursor: pointer;
+        user-select: none;
+        border: 1px solid;
+        border-radius: 6px;
+        appearance: none;
+        color: #24292e;
+        background-color: #fafbfc;
+        border-color: rgba(27, 31, 35, 0.15);
+        box-shadow: 0 1px 0 rgba(27, 31, 35, 0.04),
+          inset 0 1px 0 hsla(0, 0%, 100%, 0.25);
+        transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
+      }
+      .kiwotigo-button:hover {
+        background-color: #f3f4f6;
+        transition-duration: 0.1s;
+      }
+      .kiwotigo-button:focus {
+        outline: var(--focus-outline);
+      }
+
+      .kiwotigo-monospace {
+        font-family: monospace;
+      }
+
+      main {
+        text-align: center;
+      }
+      #kiwotigoCanvas {
+        max-width: 100vw;
+      }
+    </style>
   </head>
-  <style>
-    body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
-
-    .createContinentConfig {
-      position: absolute;
-      width: 270px;
-      user-select: none;
-      border-right: 1px solid #eee;
-      border-bottom: 1px solid #eee;
-      background-color: rgba(255, 255, 255, 0.7);
-      border-bottom-right-radius: 6px;
-    }
-
-    h1 {
-      margin: 0 0 0.5em;
-      padding: 0.3em 0 0 0.3em;
-    }
-
-    :root {
-      --focus-outline: double #d06;
-    }
-
-    .kiwotigo-form fieldset.kiwotigo-form-group {
-      border: 0;
-    }
-
-    .kiwotigo-form-label,
-    .kiwotigo-form-input {
-      font-size: 14px;
-      line-height: 20px;
-    }
-
-    .kiwotigo-form-label {
-      padding-right: 1em;
-    }
-
-    .kiwotigo-form-input {
-      border-width: 0;
-      background-color: #f8f9fa;
-      box-shadow: 0 1px 0 rgba(27, 31, 35, 0.04),
-        inset 0 1px 0 hsla(0, 0%, 100%, 0.25);
-    }
-    .kiwotigo-form-input:hover {
-      background-color: #f0f1f2;
-    }
-    .kiwotigo-form-input:focus {
-      background-color: #ffffff;
-      outline: var(--focus-outline);
-    }
-
-    input[type="number"].kiwotigo-form-input {
-      width: 5em;
-    }
-
-    .kiwotigo-input-row {
-      display: flex;
-      justify-content: flex-end;
-      align-items: baseline;
-      margin-bottom: 4px;
-    }
-
-    .kiwotigo-form-actions {
-      padding-top: 1em;
-      text-align: right;
-    }
-
-    .kiwotigo-button {
-      position: relative;
-      display: inline-block;
-      padding: 5px 16px;
-      font-size: 14px;
-      font-weight: 500;
-      line-height: 20px;
-      white-space: nowrap;
-      vertical-align: middle;
-      cursor: pointer;
-      user-select: none;
-      border: 1px solid;
-      border-radius: 6px;
-      appearance: none;
-      color: #24292e;
-      background-color: #fafbfc;
-      border-color: rgba(27, 31, 35, 0.15);
-      box-shadow: 0 1px 0 rgba(27, 31, 35, 0.04),
-        inset 0 1px 0 hsla(0, 0%, 100%, 0.25);
-      transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
-    }
-    .kiwotigo-button:hover {
-      background-color: #f3f4f6;
-      transition-duration: 0.1s;
-    }
-    .kiwotigo-button:focus {
-      outline: var(--focus-outline);
-    }
-
-    .kiwotigo-monospace {
-      font-family: monospace;
-    }
-
-    main {
-      text-align: center;
-    }
-    #kiwotigoCanvas {
-      max-width: 100vw;
-      max-height: 100vh;
-    }
-  </style>
   <body>
     <section class="createContinentConfig">
       <h1>kiwotigo.mjs</h1>
