improve canvas max-width style

--- a/test-kiwotigo-mjs.html
+++ b/test-kiwotigo-mjs.html
@@ -112,7 +112,7 @@
       }
       #kiwotigoCanvas {
         display: inline-block;
-        max-width: 100vw;
+        max-width: 100%;
       }
 
       .loadingModal {
