--- a/test-kiwotigo-mjs.html
+++ b/test-kiwotigo-mjs.html
@@ -362,6 +362,34 @@
               step="0.01"
             />
           </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="maxExtendedOuterRangeFactor"
+              >maxExtendedOuterRange</label
+            >
+            <input
+              class="kiwotigo-form-input"
+              name="maxExtendedOuterRangeFactor"
+              type="number"
+              value="4.0"
+              min="0.1"
+              max="10"
+              step="0.1"
+            />
+          </div>
+          <div class="kiwotigo-input-row">
+            <label class="kiwotigo-form-label" for="canvasMargin"
+              >canvasMargin</label
+            >
+            <input
+              class="kiwotigo-form-input"
+              name="canvasMargin"
+              type="number"
+              value="10"
+              min="0"
+              max="100"
+              step="1"
+            />
+          </div>
           <div class="kiwotigo-form-actions">
             <button
               type="submit"
@@ -485,6 +513,9 @@
           "fastGrowIterations",
           "maxRegionSizeFactor",
           "probabilityCreateRegionAt",
+          // "enableExtendedConnections",
+          "maxExtendedOuterRangeFactor",
+          "canvasMargin",
         ].reduce(
           (c, key) => ({ ...c, [key]: parseFloat(formElements[key].value) }),
           {
