rename to index.html (prepare for gh pages)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>test kiwotigo.mjs</title>
+    <title>spearwolf/kiwotigo demo</title>
     <link rel="stylesheet" type="text/css" href="./loading.css" />
     <style>
       body {
